# rust_web_project

./: .gitignore  Cargo.toml  README  Rocket.toml  database.sqlite
migration/: Cargo.toml
migration/src/: lib.rs  migrator.rs
migration/src/migrations/: m20220101_000001_create_table.rs  m20250326_191821_create_users_table.rs  m20250327_114612_rename_phon_num_to_phone_num.rs  m20250327_120459_add_password_to_user.rs  m20250405_144654_add_img_to_user.rs  mod.rs  (+3 more)
src/: db.rs  main.rs
src/api/: comment_api.rs  items_api.rs  mod.rs  user_api.rs
src/controllers/: comment_controller.rs  home.rs  home_controller.rs  items.rs  items_controller.rs  mod.rs  user.rs  user_controller.rs
src/models/: category_model.rs  coment_model.rs  comment_model.rs  img_for_item.rs  item_model.rs  mod.rs  user_model.rs
src/services/: comment_service.rs  help_service.rs  img_for_items_services.rs  item_service.rs  mod.rs  product_service.rs  session.rs  user_service.rs
src/validators/: mod.rs  password_validator.rs  phone_validator.rs
static/css/: style.css
static/javascript/: comment-edit.js  flash.js
templates/: base.html.tera  hello.html.tera  index.html.tera  item.html.tera  items.html.tera  register.html.tera
templates/components/: footer.html.tera  header.html.tera
templates/error/: 403.html.tera
templates/items/: add_item.html.tera  creat_new_category.html.tera  edit_item.html.tera  item.html.tera  items.html.tera
templates/user/: all_users.html.tera  change_password.html.tera  edit_profile.html.tera  log_in.html.tera  profile.html.tera  register.html.tera
