[package]
name = "web_project"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0", features = ["json","secrets", "tls"] }
rocket_dyn_templates = { version = "0.2", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.1.7", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "1.1.7", features = ["sqlx-sqlite"] }
thiserror = "2.0.12"
argon2 = "0.5"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
rand_core = { version = "0.9.3", features = ["std"] }
validator = "0.20"
validator_derive = "0.20"

[workspace]
members = ["migration"]
